# finance-rag

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  deploy-prod.yml  deploy-test.yml  eval.yml
deploy/aws/: cloudformation.yml  deploy.sh
deploy/monitoring/: cloudwatch_dashboard.json  langsmith_monitor.py
docs/: stakeholder-presentation-outline.md
eval/: run_ragas.py  test_set.json
graphify-out/: GRAPH_REPORT.md  graph.json
src/api/: main.py
src/auth/: models.py  rbac.py
src/generation/: llm_client.py  prompt_builder.py
src/guardrails/: chain.py  safety_filter.py  scope_filter.py
src/ingestion/: edgar_fetcher.py  indexer.py  pdf_parser.py  run.py
src/observability/: langfuse_tracer.py
src/retrieval/: bm25_search.py  fusion.py  reranker.py  vector_search.py
tests/: test_ingestion.py  test_retrieval.py
