[project]
name = "finance-rag"
version = "1.0.0"
description = "Production RAG over SEC 10-K filings — hybrid retrieval, citation enforcement, RAGAS CI eval"
requires-python = ">=3.11"

dependencies = [
    "openai>=1.30.0",
    "faiss-cpu>=1.8.0",
    "rank-bm25>=0.2.2",
    "pymupdf>=1.24.0",
    "beautifulsoup4>=4.12.0",
    "cohere>=5.0.0",
    "langfuse>=2.0.0",
    "ragas>=0.1.9",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "datasets>=2.19.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]